changed bootstrap tabe to angular table